--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </nav>
         </header>
         <div class="landing-page">
-            <h1 class="big-tittle">VOICI MON PORTFOLIO</h1> 
+            <h1 class="big-tittle">VOICI MON ADRIEN</h1> 
         </div>     
     </section> 
 </body>
