ADD final project

--- a/index.html
+++ b/index.html
@@ -8,18 +8,122 @@
 <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <section class="top-page">
+     <section class="top-page">
         <header>
             <img src="" alt="">
             <nav class="nav">
-                <li>acceuil</li>
-                <li>cv</li>
-                <li>moi</li>
+                <li><a href="#experience">experience</a></li>
+                <li><a href="#competence">competence</a></li>
+                <li><a href="#projet">projet</a></li>
             </nav>
         </header>
         <div class="landing-page">
-            <h1 class="big-tittle">VOICI MON ADRIEN</h1> 
-        </div>     
-    </section> 
+            <h1 class="big-tittle">VOICI MON PORTFOLIO</h1>
+            <a class="scroll-down" href="#cv">Scroll</a> 
+        </div>
+    </section>
+    <section class="cv" id="cv">
+<div class="cv-it">
+    <p class="cv-details">Mes différents CDD dans divers domaine (informatique, aéronotique..)</p>
+</div>
+<div class="cv-it">
+    <p class="cv-details">Mes competences general et informatique</p>
+</div>
+<div class="cv-it">
+    <p class="cv-details">Présentation de mes projets informatique</p>
+</div>
+    </section>
+    <section class="experience" id="experience">
+        <h2 class="section-title">
+            Mon experience
+        </h2>
+        <div class="exp">
+            <a class="exp-box exp1 no-grid">
+                <div class="exp-details">
+                    <p class="exp-name">Stage armement d'avion, agent de piste d'aéroport et technicien d'avion</p>
+                </div>
+            </a>
+            <a class="exp-box exp2 no-grid">
+                <div class="exp-details">
+                    <p class="exp-name">Technicien SAV, CDD</p>
+                </div>
+            </a>
+            <a class="exp-box exp3 no-grid">
+                <div class="exp-details">
+                    <p class="exp-name">Préparateur logistique, CDD</p>
+                </div>
+            </a>
+        </div>
+    </section>
+    <section class="competence" id="competence">
+        <h2 class="section-title">Mes competences</h2>
+        <div class="competence-grid">
+            <a class="competence-grid1 exp-box">
+                <div class="exp-details">
+                    <p class="exp-name">Gestion de groupe</p>
+                </div>
+            </a>
+            <a class="competence-grid2 exp-box">
+                <div class="exp-details">
+                    <p class="exp-name">language C</p>
+                </div>
+            </a>
+            <a class="competence-grid3 exp-box">
+                <div class="exp-details">
+                    <p class="exp-name">Base html</p>
+                </div>
+            </a>
+            <a class="competence-grid4 exp-box">
+                <div class="exp-details">
+                    <p class="exp-name">Base css</p>
+                </div>
+            </a>
+            <a class="competence-grid5 exp-box">
+                <div class="exp-details">
+                    <p class="exp-name">Travail de groupe</p>
+                </div>
+            </a>
+            <a class="competence-grid6 exp-box">
+                <div class="exp-details">
+                    <p class="exp-name">Github</p>
+                </div>
+            </a>
+        </div>
+    </section>
 </body>
+    <section class="projet" id="projet">
+        <h2 class="section-title">Mes projets</h2>
+        <div class="projet-grid">
+            <a class="projet-grid1 exp-box">
+                <div class="exp-details">
+                    <p class="exp-name">Jeu 2D type RPG<p>
+                </div>
+            </a>
+            <a class="projet-grid2 exp-box">
+                <div class="exp-details">
+                    <p class="exp-name">algorithme de generation de labyrinthe<p>
+                </div>
+            </a>
+            <a class="projet-grid3 exp-box">
+                <div class="exp-details">
+                    <p class="exp-name">Réalisation d'une application</p>
+                </div>
+            </a>
+            <a class="projet-grid4 exp-box">
+                <div class="exp-details">
+                    <p class="exp-name">Réalisation d'un site en ligne</p>
+                </div>
+            </a>
+            <a class="projet-grid5 exp-box">
+                <div class="exp-details">
+                    <p class="exp-name">Hackathon société général</p>
+                </div>
+            </a>
+            <a class="projet-grid6 exp-box">
+                <div class="exp-details">
+                    <p class="exp-name">Projets mathématique</p>
+                </div>
+            </a>
+        </div>
+    </section>
 </html>
